@@ -48,15 +48,16 @@ _URJ_USB_FTDX(ft2232)
 _URJ_USB_FTDX(armusbocd)
 _URJ_USB_FTDX(armusbocdtiny)
 _URJ_USB_FTDX(armusbtiny_h)
+_URJ_USB_FTDX(flyswatter)
 _URJ_USB_FTDX(gnice)
 _URJ_USB_FTDX(gniceplus)
 _URJ_USB_FTDX(jtagkey)
+_URJ_USB_FTDX(milkymist)
 _URJ_USB_FTDX(oocdlinks)
-_URJ_USB_FTDX(turtelizer2)
-_URJ_USB_FTDX(usbtojtagif)
 _URJ_USB_FTDX(signalyzer)
-_URJ_USB_FTDX(flyswatter)
+_URJ_USB_FTDX(turtelizer2)
 _URJ_USB_FTDX(usbscarab2)
+_URJ_USB_FTDX(usbtojtagif)
 #endif
 #ifdef ENABLE_CABLE_USBBLASTER
 _URJ_USB_FTDX(usbblaster)
